# zen-explorer

./: .gitignore  README.md  cli.py  main.py  main_rewrite.py  pyproject.toml  requirements.txt
.github/workflows/: build-gui.yml  build.yml  release.yml
explorer_ui/: app.py
explorer_ui/components/: content.py  main.py  sidebar.py  theme_box.py  topbar.py
explorer_ui/explorer_themes/default/: style.css  variables.txt
explorer_ui/models/: pages.py  profiles.py  widgets.py
explorer_ui/pages/: discover.py  management.py  overview.py  settings.py
explorer_ui/utils/: images.py  stylesheets.py  widgets.py
helpers/: styles.py
scripts/: get_version.py
ui/: __init__.py  app.py  main_content.py  main_window.py  nav_ui.py  pyside_rewrite.py  theme_browse_screen.py  theme_frame.py  theme_screen.py  tkmd.py  util.py  utils.py
ui/components/: __init__.py  styled_widget.py  theme_box.py  top_bar.py
ui/explorer_themes/default/: style.css  variables.txt
zen_explorer_core/: browser.py  installer.py  profiles.py  repository.py  settings.py
zen_explorer_core/models/: theme.py
