# This is only for the core library, not CLI/GUI
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zen-exporer-core"
version = "0.1.0"
dynamic = ["version", "dependencies"]
license = {text = "MIT License"}
requires-python = ">=3.9"

[tool.setuptools]
packages = ["zen_explorer_core"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}